--- a/example/index.html
+++ b/example/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="text/javascript" src="../dist/example.js"></script>
+  <script type="text/javascript" src="./vue-swipeable-bottom-sheet.js"></script>
 </body>
 </html>
